cfn_benchmark/cfn_templates/Tianyi2__IRIS/data/cloudformation_collected_templates_new/template_22389_vpc_sample.json
{

    "AWSTemplateFormatVersion": "2010-09-09",

    "Parameters": {

        "vpcCIDR": {

            "Type": "String",

            "Description": "CIDR for the VPC"

        },

        "PublicSubnetCIDR": {

            "Type": "String",

            "Description": "CIDR for the public subnet"

        },

        "PrivateSubnetCIDR": {

            "Type": "String",

            "Description": "CIDR for the private subnet"

        },

        "ImageId": {

            "Type": "String",

            "Description": "AMI ID"

        },

        "InstanceType": {

            "Type": "String",

            "Description": "Instance type"

        },

        "KeyName": {

            "Type": "String",

            "Description": "Key pair name"

        }

    },

    "Resources": {

        "VPC": {

            "Type": "AWS::EC2::VPC",

            "Properties": {

                "CidrBlock": {

                    "Ref": "vpcCIDR"

                },

                "EnableDnsSupport": "true",

                "EnableDnsHostnames": "true",

                "Tags": [

                    {

                        "Key": "Name",

                        "Value": "demoVPC"

                    }

                ]

            }

        },

        "PublicSubnet": {

            "Type": "AWS::EC2::Subnet",

            "Properties": {

                "VpcId": {"Ref": "VPC"},

                "CidrBlock": {"Ref": "PublicSubnetCIDR"},

                "AvailabilityZone": {

                    "Fn::Select": [

                        "0",

                        {

                            "Fn::GetAZs": {

                                "Ref": "AWS::Region"

                            }

                        }

                    ]

                },

                "MapPublicIpOnLaunch": "true",

                "Tags": [

                    {

                        "Key": "Name",

                        "Value": "demoPublicSubnet"

                    }

                ]

            }

        },

        "PrivateSubnet": {

            "Type": "AWS::EC2::Subnet",

            "Properties": {

                "VpcId": {"Ref": "VPC"},

                "CidrBlock": {"Ref": "PrivateSubnetCIDR"},

                "AvailabilityZone": {

                    "Fn::Select": [

                        "1",

                        {

                            "Fn::GetAZs": {

                                "Ref": "AWS::Region"

                            }

                        }

                    ]

                },

                "Tags": [

                    {

                        "Key": "Name",

                        "Value": "demoPrivateSubnet"

                    }

                ]

            }

        },

        "InternetGateway": {

            "Type": "AWS::EC2::InternetGateway"

        },

        "AttachGateway": {

            "Type": "AWS::EC2::VPCGatewayAttachment",

            "Properties": {

                "VpcId": {"Ref": "VPC"},

                "InternetGatewayId": {"Ref": "InternetGateway"}

            }

        },

        "NATGatewayEIP": {

            "Type": "AWS::EC2::EIP",

            "Properties": {

                "Domain": "vpc"

            }

        },

        "NATGateway": {

            "Type": "AWS::EC2::NatGateway",

            "Properties": {

                "AllocationId": {

                    "Fn::GetAtt": ["NATGatewayEIP","AllocationId"]

                },

                "SubnetId": {

                    "Ref": "PublicSubnet"

                }

            }

        },

        "PublicRouteTable": {

            "Type": "AWS::EC2::RouteTable",

            "Properties": {

                "VpcId": {

                    "Ref": "VPC"

                },

                "Tags": [

                    {

                        "Key": "Name",

                        "Value": "demoPublicRouteTable"

                    }

                ]

            }

        },

        "PrivateRouteTable": {

            "Type": "AWS::EC2::RouteTable",

            "Properties": {

                "VpcId": {

                    "Ref": "VPC"

                },

                "Tags": [

                    {

                        "Key": "Name",

                        "Value": "demoPrivateRouteTable"

                    }

                ]

            }

        },

        "PublicRouteToIGW": {

            "Type": "AWS::EC2::Route",

            "Properties": {

                "RouteTableId": {

                    "Ref": "PublicRouteTable"

                },

                "DestinationCidrBlock": "0.0.0.0/0",

                "GatewayId": {

                    "Ref": "InternetGateway"

                }

            }

        },

        "PrivateRouteToNAT": {

            "Type": "AWS::EC2::Route",

            "Properties": {

                "RouteTableId": {

                    "Ref": "PrivateRouteTable"

                },

                "DestinationCidrBlock": "0.0.0.0/0",

                "NatGatewayId": {

                    "Ref": "NATGateway"

                }

            }

        },

        "PublicSubnetRouteTableAssociation": {

            "Type": "AWS::EC2::SubnetRouteTableAssociation",

            "Properties": {

                "SubnetId": {

                    "Ref": "PublicSubnet"

                },

                "RouteTableId": {

                    "Ref": "PublicRouteTable"

                }

            }

        },

        "PrivateSubnetRouteTableAssociation": {

            "Type": "AWS::EC2::SubnetRouteTableAssociation",

            "Properties": {

                "SubnetId": {

                    "Ref": "PrivateSubnet"

                },

                "RouteTableId": {

                    "Ref": "PrivateRouteTable"

                }

            }

        },

        "PublicSecurityGroup": {

            "Type": "AWS::EC2::SecurityGroup",

            "Properties": {

                "GroupDescription": "Enable HTTP and SSH access",

                "VpcId": {

                    "Ref": "VPC"

                },

                "SecurityGroupIngress": [

                    {

                        "IpProtocol": "tcp",

                        "FromPort": "22",

                        "ToPort": "22",

                        "CidrIp": "0.0.0.0/0"

                    },

                    {

                        "IpProtocol": "tcp",

                        "FromPort": "80",

                        "ToPort": "80",

                        "CidrIp": "0.0.0.0/0"

                    }

                ]

            }

        },

        "PrivateSecurityGroup": {

            "Type": "AWS::EC2::SecurityGroup",

            "Properties": {

                "GroupDescription": "Enable HTTP access",

                "VpcId": {

                    "Ref": "VPC"

                },

                "SecurityGroupIngress": [

                    {

                        "IpProtocol": "tcp",

                        "FromPort": "22",

                        "ToPort": "22",

                        "CidrIp": {

                            "Ref": "PublicSubnetCIDR"

                        }

                    }

                ]

            }

        },

        "PublicServer": {

            "Type": "AWS::EC2::Instance",

            "Properties": {

                "ImageId": {

                    "Ref": "ImageId"

                },

                "InstanceType": {

                    "Ref": "InstanceType"

                },

                "KeyName": {

                    "Ref": "KeyName"

                },

                "NetworkInterfaces": [

                    {

                        "AssociatePublicIpAddress": "true",

                        "DeviceIndex": "0",

                        "DeleteOnTermination": "true",

                        "SubnetId": {

                            "Ref": "PublicSubnet"

                        },

                        "GroupSet": [

                            {

                                "Ref": "PublicSecurityGroup"

                            }

                        ]

                    }

                ],

                "BlockDeviceMapping": [

                    {

                        "DeviceName": "/dev/sda1",

                        "Ebs": {

                            "VolumeSize": "8",

                            "VolumeType": "gp2"

                        }

                    }

                ],

                "Tags": [

                    {

                        "Key": "Name",

                        "Value": "demoPublicServer"

                    }

                ]

            }

        },

        "PrivateServer": {

            "Type": "AWS::EC2::Instance",

            "Properties": {

                "ImageId": {

                    "Ref": "ImageId"

                },

                "InstanceType": {

                    "Ref": "InstanceType"

                },

                "KeyName": {

                    "Ref": "KeyName"

                },

                "NetworkInterfaces": [

                    {

                        "AssociatePublicIpAddress": "false",

                        "DeviceIndex": "0",

                        "DeleteOnTermination": "true",

                        "SubnetId": {

                            "Ref": "PrivateSubnet"

                        },

                        "GroupSet": [

                            {

                                "Ref": "PrivateSecurityGroup"

                            }

                        ]

                    }

                ],

                "BlockDeviceMapping": [

                    {

                        "DeviceName": "/dev/sda1",

                        "Ebs": {

                            "VolumeSize": "8",

                            "VolumeType": "gp2"

                        }

                    }

                ],

                "Tags": [

                    {

                        "Key": "Name",

                        "Value": "demoPrivateServer"

                    }

                ]

            }

        }

    }

}
